[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
[project]
name = "urirun-connector-envmap"
version = "0.1.0"
description = "Mapa środowiska w ograniczonej pamięci: fingerprints+snapshoty dla reverse/verify przy skali GB (envmap://)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Tom Sapletta" }]
dependencies = ["urirun>=0.4.14"]
[project.entry-points."urirun.bindings"]
envmap = "urirun_connector_envmap.core:urirun_bindings"
[tool.setuptools.packages.find]
include = ["urirun_connector_envmap*"]
